# app.fermin

./: .dockerignore  .env_example  .gcloudignore  .gitignore  Dockerfile  Readme.md  app.yaml  docker-compose.yaml  makefile  package.json  tsconfig.json
app/client/: index.js  index.pug  manifest.webmanifest  service-worker.js
app/server/: app.js
apps/hub/: index.js  index.sass  index.tsx
apps/notes/: index.js  index.tsx
apps/test/: Component1.jsx  Component2.jsx  index.js  reducer.js
backend/: Cargo.toml
backend/migrations/2020-04-19-140320_create_notes/: up.sql
backend/migrations/2020-04-26-104349_create_users/: up.sql
backend/migrations/2020-10-04-124919_cv_entries/: down.sql  up.sql
backend/migrations/2020-11-08-162528_user_with_profile_pic/: down.sql  up.sql
backend/migrations/2020-12-08-221250_extend_dv_entries/: down.sql  up.sql
backend/src/: main.rs
backend/src/constants/: defaults.rs  env.rs  mod.rs
backend/src/db/: mod.rs  schema.rs
backend/src/db/models/: cv_entries.rs  mod.rs  notes.rs  users.rs
backend/src/router/: auth.rs  mod.rs  webapp.rs
backend/src/router/api/: auth.rs  cv_entries.rs  mod.rs  notes.rs  profile.rs
backend/src/routes/: mod.rs  webapp.rs
backend/src/utils/: cv_struct_converter.rs  mod.rs  templating.rs
client/: index.js  index.pug  index.sass  index.tsx
frontend/: .gitignore  fontello.config.json  package.json  plugin.js  rollup.config.js  tsconfig.json
frontend/plugins/: rollup-plugin-stil.js
frontend/src/: index.html  (+2 more)
redis/: redis.conf
server/: app.js
theme/: constants.sass  mixins.sass
(+235 files in other folders)
