[package]
name = "backend"
version = "0.1.0"
authors = ["dafn"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-files = "0.2.1"
actix-rt = "1"
serde = "1.0.104"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0.48"
log = "0.4.0"
env_logger = "0.7.1"
diesel = { version = "1.0.0", features = ["postgres", "chrono", "r2d2"] }
rustc-serialize = "0.3"
rust-crypto = "^0.2"
dotenv = "0.9.0"
